# harfbuzzy

./: AGENTS.md  PLAN.md  README.md  config.nims  harfbuzzy.nimble
.github/workflows/: ci.yml
docs/: bindings-review.md
examples/: shape_paragraph.nim
src/: harfbuzzy.nim
src/harfbuzzy/: fribidi_raw.nim  raw.nim
src/harfbuzzy/private/: staticHarfbuzz.nim
src/harfbuzzy/private/harfbuzz-static/: CMakeLists.txt
tests/: tharfbuzzy.nim
tools/: generate_raw_bindings.sh  harfbuzz.c2nim
